hw5/part1/tests/prob1/custom/cart_invalid_example.stderr
error[E0599]: no method named `checkout` found for struct `part1::prob1::cart::Empty` in the current scope
  --> tests/prob1/custom/cart_invalid_example.rs:12:19
   |
12 |             empty.checkout();
   |                   ^^^^^^^^ method not found in `Empty`
